🔥 Remove useless categories

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           </ul>
           <div class="filter-select-box">
             <button class="filter-select" data-select>
-              <div class="select-value" data-selecct-value>Select category</div>
+              <div class="select-value" data-selecct-value>Selectionner une catégorie</div>
               <div class="select-icon">
                 <ion-icon name="chevron-down"></ion-icon>
               </div>
@@ -284,12 +284,6 @@
             <ul class="select-list">
               <li class="select-item">
                 <button data-select-item>Tout</button>
-              </li>
-              <li class="select-item">
-                <button data-select-item>Web design</button>
-              </li>
-              <li class="select-item">
-                <button data-select-item>Applications</button>
               </li>
               <li class="select-item">
                 <button data-select-item>Développement web</button>
