--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <textarea name="message" class="form-input" placeholder="Votre message" required data-form-input></textarea>
             <button class="form-btn" type="submit" disabled data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
-              <span>Envoyer votre messager</span>
+              <span>Envoyer votre message</span>
             </button>
           </form>
         </section>
