--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           </ul>
           <div class="filter-select-box">
             <button class="filter-select" data-select>
-              <div class="select-value" data-selecct-value>Selectionner une catégorie</div>
+              <div class="select-value" data-select-value>Selectionner une catégorie</div>
               <div class="select-icon">
                 <ion-icon name="chevron-down"></ion-icon>
               </div>
@@ -291,7 +291,7 @@
             </ul>
           </div>
           <ul class="project-list">
-            <li class="project-item  active" data-filter-item data-category="développement web">
+            <li class="project-item  active" categorie-filter-item data-category="développement web">
               <a href="https://zayti.github.io/EMS/location.html" target="_blank">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -303,7 +303,7 @@
                 <p class="project-category">Développement web</p>
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="développement web">
+            <li class="project-item  active" categorie-filter-item data-category="développement web">
               <a href="https://zayti.github.io/2048/" target="_blank">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -315,7 +315,7 @@
                 <p class="project-category">Développement web</p>
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="développement web">
+            <li class="project-item  active" categorie-filter-item data-category="développement web">
               <a href="https://www.aztek.lu" target="_blank">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -327,7 +327,7 @@
                 <p class="project-category">Développement web</p>
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="développement web">
+            <li class="project-item  active" categorie-filter-item data-category="développement web">
               <a href="https://github.com/Ozraam/TheMonster" target="_blank">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -339,7 +339,7 @@
                 <p class="project-category">Développement web</p>
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="développement web">
+            <li class="project-item  active" categorie-filter-item data-category="développement web">
               <a href="https://github.com/ZaYtI/reparm_website">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
